fix overflow

--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ html {
 body{
   padding: 0;
   margin:0;
+  overflow-x: hidden;
 }
 h1 {
   font-family: "Poppins", sans-serif;
